# material-ai

./: .coveragerc  .dockerignore  .env.example  .gcloudignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  cloudbuild.sh  cloudbuild.yaml  config.ini  deploy_infra.sh  docker-compose.yml  pyproject.toml  release-please-config.json  setup.sh  sports_analytics.db  ui_config.yaml
.github/workflows/: ci.yml  create-release-pr.yml  deploy.yml  playwright-tests.yml  pr-title-checker.yml  ui.yml
material-ai-backend/: Makefile  main.py  pyproject.toml
material-ai-backend/material_ai_agent/: agent.py
material-ai-frontend/: index.html  package-lock.json  package.json
material-ai-frontend/src/: App.jsx  api.js  context.jsx  hoc.jsx  hooks.jsx  index.css  main.jsx  translator.jsx  utils.js
scripts/: __init__.py  auth.sh  backend.tf  cloudbuild.sh  create_project.sh  crun_env.sh  deploy_crun.sh  main.tf  my_script.sh  setup.sh  teardown.sh
src/: __init__.py  api.py  app.py  auth.py  config.py  exec.py  internal.py  main.py  request.py  response.py
src/material_ai/: __init__.py  agent_loader.py  api.py  app.py  auth.py  config.py  request.py  response.py  ui_config.py  ui_config_yaml.py
src/material_ai_agent/: agent.py
src/oauth/: __init__.py  context.py  google_oauth.py  interface.py  oauth.py  schema.py  utli.py
tests/: test_agent_loader.py  test_api.py  test_app.py  test_auth.py  test_config.py  test_ui_config.py  test_ui_config_yamp.py
tests/oauth/: test_azure_oauth.py  (+3 more)
ui/: package-lock.json
(+314 files in other folders)
