[project]
name = "material-ai-backend"
version = "0.1.0"
description = "Material AI Agent with FastAPI server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deprecated==1.2.18",
    "fastapi[all]>=0.116.1",
    "google-adk[database]==0.3.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "debugpy>=1.8.15",
]

[tool.black]
# Set the maximum line length. Black defaults to 88.
line-length = 88 
# Files to skip over
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | \.vscode
  | dist
)/
'''